# adsimulo

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  pre-commit.yml
adsimulo/: __version__.py  compendium.py  config.py  eva.py  game_master.py  settings.py  utils.py
adsimulo/civ/: civ.py  contansts.py  diplomacy.py  history.py  profile.py  utils.py
adsimulo/planetary_system/: planet.py  planetary_system.py  star.py
adsimulo/scripts/: constants.py  run.py  utils.py  version.py
adsimulo/universe/: constants.py  galaxy.py  planet.py  star.py  system.py  utils.py  weather.py
docs/: design.md  scripts.md
tests/: conftest.py  test_settings.py  test_utils.py
tests/adsimulo/: compendium_test.py  eva_test.py
tests/adsimulo/civ/: civ_test.py  utils_test.py
tests/adsimulo/universe/: planet_test.py  system_test.py
tests/fixtures/: instances.py  misc.py
